Example of Volley get (normal) and post (JSONObject)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/btnPost"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Post"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnGet"
+        app:layout_constraintTop_toBottomOf="@+id/tvOutput"
+        app:layout_constraintVertical_bias="0.503" />
+
     <TextView
         android:id="@+id/tvOutput"
         android:layout_width="wrap_content"
@@ -22,9 +33,9 @@
         android:layout_height="wrap_content"
         android:text="Get"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvOutput" />
+        app:layout_constraintTop_toBottomOf="@+id/tvOutput"
+        app:layout_constraintEnd_toStartOf="@+id/btnPost"/>
 
     <EditText
         android:id="@+id/etUrl"
